[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/LevelSelectMenuUI/LevelSelectMenuUI.gd" type="Script" id=1]
[ext_resource path="res://ui/LevelSelectMenuUI/Screenshot 2021-07-02 at 16.17.57.png" type="Texture" id=2]
[ext_resource path="res://ui/common/netherreich_theme.tres" type="Theme" id=3]

[node name="LevelSelectMenuUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = 50.0
margin_top = 19.0
margin_right = 1044.0
margin_bottom = 601.0
rect_scale = Vector2( 0.34, 0.34 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvadeTileTestButton" type="Button" parent="."]
visible = false
margin_left = 262.749
margin_top = 62.0605
margin_right = 338.75
margin_bottom = 83.0605
theme = ExtResource( 3 )
text = "Grimberg"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvadeTutorialButton" type="Button" parent="."]
visible = false
margin_left = 85.2284
margin_top = 173.04
margin_right = 195.228
margin_bottom = 194.04
theme = ExtResource( 3 )
text = "Fort Godbother (tutorial)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvadeLevelGenTestButton" type="Button" parent="."]
margin_left = 401.284
margin_top = 239.515
margin_right = 457.284
margin_bottom = 260.516
theme = ExtResource( 3 )
text = "BEGIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 262.079
margin_top = 158.121
margin_right = 594.079
margin_bottom = 234.121
theme = ExtResource( 3 )
text = "The City of Killearndorf is corrupted by sin.

      Find the source and see it cleansed"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
